* Some new vaults.
* Add new milestones for the CAO tournament.
* Tiles: Re-allow selection of player dolls ('-' command).
* Add missing tiles options to the options guide (docs/, '?&' command).
* Improve tiles for escape hatches and disturbances in shallow water.
* Document tiles lags in tiles_help.txt and in the in-game FAQ ('?Q' command).

Stone Soup 0.5.0 (20090612)
---------------------------

Disclaimer: These are merely the highlights, not an exhaustive list of changes.

Breaks saves and bones compatibility.


0.5 Highlights
--------------
* New species and job: Deep Dwarf, Artificer.
* Removed three species: Gnome, Grey Elf, Ogre-Mage.
* Several cool new uniques and other monsters.
* Several great new portal vaults.
* Zombies and skeletons can no longer use stairs.
* Transformations meld equipment instead of removing it.
* Many spell ranges shortened.
* Much more useful monster descriptions.
* More convenient tiles version.

Levels
------
* New portal vaults (Sewer, Ice Cave, Minitomb, Ziggurat), and many new vaults.
* Self-changing labyrinths (mappable but subject to map rot).
* Teleporting within a labyrinth always sends you away from the exit.
* The Orcish Mines are completely interconnected via the branch bottom.
* Shortened Hive to two levels.
* Ghosts may no longer appear in the Ecumenical Temple.
* Traps remember how much ammunition they have.
* Branch descriptions mention depth and whether they contain a rune.
* Fixed KMONS not accepting comma-separated list of alternative monsters.
* Tweaked most of the oklob vaults to make them less dangerous.
* Allow bazaars outside of the main dungeon.
* For timed portal vault alerts, give directional feedback.

Characters
----------
* Removed Grey Elf and Gnome species.
* Merged Ogre-Mages into Ogres with completely new aptitudes.
* Added non-healing species: Deep Dwarves.
* Swapped Kobolds' aptitudes for Long Blades and Maces & Flails.
* Added Artificer job.